--- a/Flock/Base.lproj/Main.storyboard
+++ b/Flock/Base.lproj/Main.storyboard
@@ -1177,15 +1177,24 @@ Cap</string>
                                     <segue destination="9o9-Mj-VOD" kind="show" id="TWq-OY-t6f"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OoC-iF-cXc">
+                                <rect key="frame" x="100" y="302" width="176" height="30"/>
+                                <state key="normal" title="Clear Live From Database"/>
+                                <connections>
+                                    <action selector="clearLiveFromDatabase:" destination="tMC-0R-nPf" eventType="touchUpInside" id="yiV-TZ-3cu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="6Zq-4j-jKx" firstAttribute="top" secondItem="cNK-iG-gR2" secondAttribute="bottom" constant="10" id="A2A-Hs-y7E"/>
                             <constraint firstItem="cBQ-d3-2pB" firstAttribute="top" secondItem="kPh-u6-Whc" secondAttribute="bottom" constant="8" symbolic="YES" id="Kbp-md-t7G"/>
+                            <constraint firstItem="OoC-iF-cXc" firstAttribute="top" secondItem="c9p-yd-nzU" secondAttribute="bottom" constant="8" id="MpM-VT-edJ"/>
                             <constraint firstItem="Uek-gr-Nbt" firstAttribute="top" secondItem="6Zq-4j-jKx" secondAttribute="bottom" constant="8" symbolic="YES" id="MrS-ld-hLA"/>
                             <constraint firstItem="kPh-u6-Whc" firstAttribute="leading" secondItem="cBQ-d3-2pB" secondAttribute="leading" id="Nyl-XX-o4a"/>
                             <constraint firstItem="kPh-u6-Whc" firstAttribute="top" secondItem="SOn-Qg-9Hx" secondAttribute="bottom" constant="8" symbolic="YES" id="OGI-cV-SdB"/>
                             <constraint firstItem="SOn-Qg-9Hx" firstAttribute="top" secondItem="Uek-gr-Nbt" secondAttribute="bottom" constant="8" symbolic="YES" id="ORU-mD-eDT"/>
+                            <constraint firstItem="OoC-iF-cXc" firstAttribute="centerX" secondItem="GLV-Uf-Xo0" secondAttribute="centerX" id="P83-nV-oYJ"/>
                             <constraint firstItem="c9p-yd-nzU" firstAttribute="centerX" secondItem="cBQ-d3-2pB" secondAttribute="centerX" id="cee-Dy-cuG"/>
                             <constraint firstItem="cBQ-d3-2pB" firstAttribute="centerX" secondItem="GLV-Uf-Xo0" secondAttribute="centerX" id="dfp-9Y-Ma8"/>
                             <constraint firstItem="6Zq-4j-jKx" firstAttribute="centerX" secondItem="Uek-gr-Nbt" secondAttribute="centerX" id="jkf-nl-nss"/>
@@ -1386,14 +1395,14 @@ Cap</string>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b3G-jE-Oyf">
-                                <rect key="frame" x="0.0" y="64" width="375" height="253"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="256.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RSk-2I-vlu">
-                                <rect key="frame" x="0.0" y="372.5" width="375" height="245.5"/>
+                                <rect key="frame" x="0.0" y="376.5" width="375" height="241.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="luh-mL-fhz" customClass="ZFRippleButton" customModule="Flock" customModuleProvider="target">
-                                        <rect key="frame" x="16" y="184.5" width="343" height="45"/>
+                                        <rect key="frame" x="16" y="180.5" width="343" height="45"/>
                                         <color key="backgroundColor" red="0.29803921568627451" green="0.70980392156862748" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="33V-eo-f1q"/>
@@ -1416,7 +1425,7 @@ Cap</string>
                                         </connections>
                                     </button>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wgr-rP-QHO">
-                                        <rect key="frame" x="0.0" y="47.5" width="375" height="129"/>
+                                        <rect key="frame" x="0.0" y="43.5" width="375" height="129"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="129" id="7GW-o8-Lf6"/>
                                         </constraints>
@@ -1483,7 +1492,7 @@ Cap</string>
                                         </cells>
                                     </collectionView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yWs-YD-Hrv">
-                                        <rect key="frame" x="161.5" y="8" width="52.5" height="27.5"/>
+                                        <rect key="frame" x="164" y="8" width="49" height="23.5"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -1502,7 +1511,7 @@ Cap</string>
                                 </constraints>
                             </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SbS-rW-qVy" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="64" width="375" height="308.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="312.5"/>
                                 <connections>
                                     <outlet property="dataSource" destination="9dD-sz-65b" id="RcQ-TP-dG1"/>
                                     <outlet property="delegate" destination="9dD-sz-65b" id="frg-3H-yXD"/>
